--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "dateformat": "^5.0.1",
+    "formik": "^2.2.9",
+    "lodash": "^4.17.21",
+    "mapbox-gl": "^2.5.0",
+    "mdb-react-ui-kit": "^1.4.0",
+    "mdbreact": "^5.1.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-art": "^17.0.2",
+    "react-art-map": "^1.0.8",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.0.0",
+    "sass": "^1.42.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,5 +49,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1"
   }
 }
