--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
     "sass": "^1.42.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "write-json-file": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
