--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@turf/turf": "^6.5.0",
     "classnames": "^2.3.1",
     "dateformat": "^5.0.1",
     "formik": "^2.2.9",
+    "google-map-react": "^2.1.10",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.5.0",
     "mdb-react-ui-kit": "^1.4.0",
@@ -31,7 +33,8 @@
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
-    "write-json-file": "^5.0.0"
+    "write-json-file": "^5.0.0",
+    "wrld-react": "^0.1.2406"
   },
   "scripts": {
     "start": "react-scripts start",
