--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^5.0.0",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
+    "use-sound": "^4.0.1",
     "web-vitals": "^1.1.2",
     "write-json-file": "^5.0.0",
     "wrld-react": "^0.1.2406"
