--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-data-table-component-extensions": "^1.5.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
